# wallet-service

./: .env.example  .gitignore  API_DOCUMENTATION.md  README.md  main.py  pyproject.toml  requirements.txt
app/: database.py  main.py
app/api/: auth.py  debug.py  keys.py  wallet.py
app/core/: config.py  security.py
app/middleware/: auth.py
app/models/: __init__.py  api_key.py  transaction.py  user.py  wallet.py
app/schemas/: api_key.py  paystack.py  transfer.py  user.py  wallet.py
app/services/: api_key_service.py  paystack_service.py  user_service.py  wallet_service.py
tests/: README.md  conftest.py  test_auth_google.py  test_wallet_api.py
